# claude-clean

./: .gitignore  README.md  package.json  pyproject.toml
src/: redactor.js
src/claude_clean/: __init__.py  cli.py  config.py  patterns.py  redactor.py  scanner.py
test/: sample-session.jsonl
